--- a/QtEditor/Wnd/settingwnd.ui
+++ b/QtEditor/Wnd/settingwnd.ui
@@ -15,29 +15,35 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
     <property name="leftMargin">
-     <number>11</number>
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
     </property>
     <item>
-     <widget class="QTreeWidget" name="treeWidget">
-      <attribute name="headerVisible">
+     <widget class="QTreeView" name="treeView">
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="showDropIndicator" stdset="0">
        <bool>false</bool>
-      </attribute>
-      <column>
-       <property name="text">
-        <string>1</string>
-       </property>
-      </column>
-      <item>
-       <property name="text">
-        <string>静态测试</string>
-       </property>
-       <item>
-        <property name="text">
-         <string>呵呵</string>
-        </property>
-       </item>
-      </item>
+      </property>
+      <property name="uniformRowHeights">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
