--- a/QtEditor/Control/settingfloat.ui
+++ b/QtEditor/Control/settingfloat.ui
@@ -37,6 +37,11 @@
    </property>
    <item>
     <widget class="QLineEdit" name="lineEdit">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
      <property name="acceptDrops">
       <bool>false</bool>
      </property>
